Working Collada import with crap gui

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 		</div>
 	</div>
+	<script src="js/gui.js"></script>
 	<script src="js/relics/relic.js"></script>
 	<script src="js/kr_main.js"></script>
 </body>
