--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tone/0.10.0/Tone.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.2/pixi.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-filters/1.0.6/filters.min.js"></script>
+
+
+
 		<script src="js/three//three.js"></script>
 		<script src="js/loaders/ColladaLoader.js"></script>
 		<script src="vendor/three.js/Detector.js"></script>
@@ -17,6 +20,9 @@
 		<script src="vendor/threex/THREEx.FullScreen.js"></script>
 		<script src="vendor/threex/THREEx.WindowResize.js"></script>
 		<script src="vendor/three.js/TrackballControls.js"></script>
+
+		<!-- SHADERS -->
+		<script src="js/shaders/SkyShader.js"></script>
 
 		<link  href="css/main.css" rel="stylesheet"/>
 	</head>
