--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tone/0.10.0/Tone.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.2/pixi.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-filters/1.0.6/filters.min.js"></script>
-
-
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-filters/1.0.6/filters.min.js"></script>
 
 		<script src="js/three//three.js"></script>
 		<script src="js/loaders/ColladaLoader.js"></script>
