Added Howler / AudioBoss

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 	</div>
 	<script src="js/gui.js"></script>
 	<script src="js/relics/relic.js"></script>
+	<script src="js/audio/AudioBoss.js"></script>
+	<script src="relicAssets/carbon/config.js"></script>
 	<script src="js/kr_main.js"></script>
 </body>
 </html>
