Environment + Refraction + Depth Of Field
Over the top, but a good benchmark

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.6.5/dat.gui.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.3/howler.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tone/0.10.0/Tone.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.2/pixi.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/4.5.2/pixi.min.js"></script>§§
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-filters/1.0.6/filters.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-filters/1.0.6/filters.min.js"></script>
 
@@ -23,6 +23,7 @@
 		<script src="js/shaders/SkyShader.js"></script>
 		<script src="js/shaders/SSAOShader.js"></script>
 		<script src="js/shaders/BokehShader.js"></script>
+		<script src="js/shaders/FresnelShader.js"></script>
 
 		<script src="js/loaders/ColladaLoader.js"></script>
 		<script src="vendor/three.js/Detector.js"></script>
