--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 		<script src="js/shaders/BokehShader.js"></script>
 		<script src="js/shaders/FresnelShader.js"></script>
 
+
 		<script src="js/loaders/ColladaLoader.js"></script>
 		<script src="vendor/three.js/Detector.js"></script>
 		<script src="vendor/three.js/Stats.js"></script>
@@ -49,6 +50,7 @@
 	</div>
 	<script src="js/gui.js"></script>
 	<script src="js/relics/relic.js"></script>
+	<script src="js/shaders/custom/voronoi_custom.js"></script>
 	<script src="js/audio/AudioBoss.js"></script>
 	<script src="js/postFX.js"></script>
 	<script src="relicAssets/carbon/config.js"></script>
