Custom shader pipeline is GO

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/pixi-filters/1.0.6/filters.min.js"></script>
 
 		<script src="js/three//three.js"></script>
+		<!-- <script src="js/shaderfrog-runtime.min.js"></script> -->
+		<script src="js/ShaderRuntime.js"></script>
 		<!-- POSTPROCESSING -->
 		<script src="js/postprocessing/EffectComposer.js"></script>
 		<script src="js/postprocessing/ShaderPass.js"></script>
@@ -52,9 +54,12 @@
 		<script src="js/shaders/SSAOShader.js"></script>
 		<script src="js/shaders/BokehShader.js"></script>
 		<script src="js/shaders/FresnelShader.js"></script>
+		<script src="relicAssets/carbon/shaders/Diffuse_Spec_Emissive.json"></script>
+		<script src="relicAssets/carbon/shaders/Vignette.json"></script>
 
 
 		<script src="js/loaders/ColladaLoader.js"></script>
+		<script src="js/three/loaders/OBJLoader.js"></script>
 		<script src="vendor/three.js/Detector.js"></script>
 		<script src="vendor/three.js/Stats.js"></script>
 		<script src="vendor/threex/THREEx.screenshot.js"></script>
@@ -78,10 +83,11 @@
 	</div>
 	<script src="js/gui.js"></script>
 	<script src="js/relics/relic.js"></script>
-	<script src="js/shaders/custom/voronoi_custom.js"></script>
 	<script src="js/audio/AudioBoss.js"></script>
 	<script src="js/postFX.js"></script>
 	<script src="relicAssets/carbon/config.js"></script>
-	<script src="js/kr_main.js"></script>
+	<script src="js/shaders/shaderfrog/shaderFrog_library.js"></script>
+	<script src="js/main.js"></script>
+
 </body>
 </html>
