--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 				position: absolute;
 				top: 0px; width: 100%;
 				padding: 5px;
-
 			}
 
 			a {
@@ -66,6 +65,7 @@
 		<script src="vendor/threex/THREEx.FullScreen.js"></script>
 		<script src="vendor/threex/THREEx.WindowResize.js"></script>
 		<script src="vendor/three.js/TrackBallControls.js"></script>
+		<script src="vendor/three.js/OrbitControls.js"></script>
 
 
 
